# test_systemc

./: CMakeLists.txt  main.cpp
systemc-2.3.3/: run_install.sh
systemc-2.3.3/lib-linux64/: libsystemc.la
systemc-2.3.3/lib-linux64/pkgconfig/: systemc.pc  tlm.pc
